# significance-gate

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml  siggate.toml
.github/workflows/: ci.yml  significance-gate.yml
docs/: launch-figures.md  launch_figure1_null.json  launch_figure2_gpqa.md  launch_figures_sim.py
examples/: demo.py  make_demo_data.py
examples/data/noise/: samples_baseline.jsonl  samples_candidate.jsonl
examples/data/real/: samples_baseline.jsonl  samples_candidate.jsonl
examples/data/suite_baseline/: samples_arc_challenge.jsonl  samples_gsm8k.jsonl  samples_hellaswag.jsonl  samples_mmlu.jsonl
examples/data/suite_candidate/: samples_arc_challenge.jsonl  samples_gsm8k.jsonl  samples_hellaswag.jsonl  samples_mmlu.jsonl
examples/data/underpowered/: samples_baseline.jsonl  samples_candidate.jsonl
src/siggate/: __init__.py  adapters.py  cli.py  comment.py  config.py  decision.py  gate.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_comment.py  test_config.py  test_decision.py  test_gate.py
